--- a/app/Resources/views/crmactividad/task.html.twig
+++ b/app/Resources/views/crmactividad/task.html.twig
@@ -104,7 +104,7 @@
                         <div class="col-md-1 addPersona" style="margin-top:20px;">
                             <button id="plusPersona" style="margin-top:25px;" class="btn btn-success"><i class="fa fa-plus"></i></button>
                         </div>
-                        <div class="col-md-3 prioridad" style="margin-top:20px;">
+                        <div class="col-md-3 prioridad hidden" style="margin-top:20px;">
                             <label>{{prioridadTareas}}</label>
                             <select style="margin-top:25px; width:100%;" id="cmbPrioridad" type="text" name="prioridad" class="input-sm form-control validateInput dpbPriority firstPriority">
                                 {% for prio in prioridad %}
