--- a/app/Resources/views/crmcuenta/cliente.html.twig
+++ b/app/Resources/views/crmcuenta/cliente.html.twig
@@ -38,9 +38,15 @@
                             <label>{{direccionCliente}}</label>
                             <input type="text" name="address[]" class="input-sm form-control  txtAddress txtAddressFirst">
                         </div>
-                        <div class="col-md-2 zipcode" style="margin-top:20px;">
-                            <label>{{zipCodeCliente}}</label>
-                            <input type="text" name="zipcode[]" class="input-sm form-control  txtZipCode txtZipCodeFirst">
+                        
+                        <div class="col-md-2 city" style="margin-top:20px;">
+                            <label>{{ciudadCliente}}</label>
+                            <input type="text" name="addressCity[]" class="input-sm form-control txtCity">
+                            {#<select style="width:100%;" id name="addressCity[]" class="input-sm form-control validateSelect dpbCity dpbCityFirst">
+                                {% for ciudad in ciudades %}
+                                    <option value={{ciudad.id}}>{{ciudad.nombre}}</option>
+                                {% endfor %}
+                            </select>#}
                         </div>
                         <div class="col-md-2 state" style="margin-top:20px;">
                             <label>{{departamentoCliente}}</label>
@@ -51,14 +57,10 @@
                                     {% endfor %}
                             </select>#}
                         </div>
-                        <div class="col-md-2 city" style="margin-top:20px;">
-                            <label>{{ciudadCliente}}</label>
-                            <input type="text" name="addressCity[]" class="input-sm form-control txtCity">
-                            {#<select style="width:100%;" id name="addressCity[]" class="input-sm form-control validateSelect dpbCity dpbCityFirst">
-                                {% for ciudad in ciudades %}
-                                    <option value={{ciudad.id}}>{{ciudad.nombre}}</option>
-                                {% endfor %}
-                            </select>#}
+                        
+                        <div class="col-md-2 zipcode" style="margin-top:20px;">
+                            <label>{{zipCodeCliente}}</label>
+                            <input type="text" name="zipcode[]" class="input-sm form-control  txtZipCode txtZipCodeFirst">
                         </div>
                         
                         <div class="col-md-1 addAddress" style="margin-top:20px;">
@@ -147,7 +149,7 @@
                         
                         
                         <div class="clearfix"></div> 
-                        {#<div class="col-md-3 contacts" style="margin-top:20px;">
+                        <div class="col-md-3 contacts" style="margin-top:20px;">
                             <label>Contacts</label>
                             <label >{{cuentaActividad}}</label>
                             <select style="width:100%;" id="contactos" name="contactos[]" class=" cal input-sm form-control validateSelect  dpbContacts dpbFirstContacts">
@@ -155,7 +157,7 @@
                                 {# {% for actividad in actividades %}
                                     <option value={{actividad.id}}>{{actividad.nombre}}</option>
                                 {% endfor %} #}
-                            {#</select>
+                            </select>
                         </div>
                         <div class="col-md-4 contactsTelefono" style="margin-top:20px;">
                             <label>{{telefonoContacto}}</label>
@@ -167,7 +169,7 @@
                         </div>
                         <div class="col-md-1 addContact" style="margin-top:20px;">
                             <button id="plusContact" style="margin-top:25px;" class="btn btn-success"><i class="fa fa-plus"></i></button>
-                        </div>#}
+                        </div>
                         {#<div class="col-md-3" style="margin-top:20px;">
                             <label>{{nombreCliente}}</label>
                             <input id="txtContactoFirstName" type="text" name="txtContactoLastName[]" class="input-sm form-control validateInput">
