--- a/app/Resources/views/layout/layouterpajustes.html.twig
+++ b/app/Resources/views/layout/layouterpajustes.html.twig
@@ -58,7 +58,7 @@
             {% endblock %}
     
     </head>
-    <body>
+    <body style="font-family: 'Roboto', sans-serif;" class="sans">
  {% block body %}
         
         <!-- Barra de Navegacion con Breadcrumb -->
