--- a/app/Resources/views/layout/menu.html.twig
+++ b/app/Resources/views/layout/menu.html.twig
@@ -22,7 +22,14 @@
 		</span>
 	</li>
 </a>            
-            
+<a href="{{path('admin_ctlindustria_index')}}" class="leftnava" style="margin-top: 45px;">
+	<li class="leftnav left {% if menuIndustriaA is defined %}active {% endif %}">
+		Industries
+		<span class="pull-right right">
+			<i class="{% if menuIndustriaA is defined %}fa fa-arrow-right {% endif %}"></i>
+		</span>
+	</li>
+</a>             
 {#<a href="{{path('admin_campaigns_index')}}" class="leftnava">
     <li class="leftnav left {% if menuCampaniaA is defined %}active {% endif %}">
         {{menuCampania}}
