--- a/app/Resources/views/crmtipocampania/index.html.twig
+++ b/app/Resources/views/crmtipocampania/index.html.twig
@@ -9,7 +9,7 @@
 {% endblock %}
 {% block descripcion %}
      <div class="col-md-5">
-          <p class="robo" style="font-weight: 300; margin-bottom: 0px; font-size: 30px;">{{encabezadoTipoCampania}}</p>
+          <p class="robo" style="font-weight: 300; margin-bottom: 0px; font-size: 30px;">{{encabezadoTipoCampania | capitalize}}</p>
           <p class="robo" style="font-weight: 300; font-size: 14px; ">{{descripcionTipoCampania}}</p>
      </div>
 
