--- a/app/Resources/views/crmtipocuenta/index.html.twig
+++ b/app/Resources/views/crmtipocuenta/index.html.twig
@@ -16,7 +16,7 @@
           <p id="confirmButtonText" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{confirmButtonText}}</p>
           <p id="alternateconfirmButtonText" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{alternateconfirmButtonText}}</p>
 
-        <p class="robo" style="font-weight: 300; margin-bottom: 0px; font-size: 30px;">{{encabezadoTipoCuenta}}</p>
+        <p class="robo" style="font-weight: 300; margin-bottom: 0px; font-size: 30px;">{{encabezadoTipoCuenta | capitalize}}</p>
         <p class="robo" style="font-weight: 300; font-size: 14px; ">{{descripcionTipoCuenta}}</p>
     </div>
 
