--- a/app/Resources/views/ctlprioridad/index.html.twig
+++ b/app/Resources/views/ctlprioridad/index.html.twig
@@ -8,7 +8,7 @@
 
 {% block descripcion %}
     <div class="col-md-5">
-        <p class="robo" style="font-weight: 300; margin-bottom: 0px; font-size: 30px;">{{encabezadoPrioridad}}</p>
+        <p class="robo" style="font-weight: 300; margin-bottom: 0px; font-size: 30px;">{{encabezadoPrioridad | capitalize}}</p>
         <p class="robo" style="font-weight: 300; font-size: 14px; ">{{descripcionPrioridad}}</p>
     </div>
 
