--- a/app/Resources/views/crmcalendar/index.html.twig
+++ b/app/Resources/views/crmcalendar/index.html.twig
@@ -38,7 +38,7 @@
 {% endblock %}
 {% block descripcion %}
      <div class="col-md-5">
-          <p class="robo" style="font-weight: 300; margin-bottom: 0px; font-size: 30px;">{{encabezadoCalendar}}</p>
+          <p class="robo" style="font-weight: 300; margin-bottom: 0px; font-size: 30px;">{{encabezadoCalendar | capitalize }}</p>
           <p class="robo" style="font-weight: 300; font-size: 14px; ">{{descripcionCalendar}}</p>
           <p id="cancelLabel" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{cancelLabel}}</p>
           <p id="cancelButtonText" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{cancelButtonText}}</p>
