--- a/app/Resources/views/crmcaso/index.html.twig
+++ b/app/Resources/views/crmcaso/index.html.twig
@@ -20,7 +20,7 @@
 {% endblock %}
 {% block descripcion %}
      <div class="col-md-5">
-            <p class="robo" style="font-weight: 300; margin-bottom: 0px; font-size: 30px;">{{encabezadoCaso}} </p>
+            <p class="robo" style="font-weight: 300; margin-bottom: 0px; font-size: 30px;">{{encabezadoCaso | capitalize}} </p>
            <p class="robo" style="font-weight: 300; font-size: 14px; ">{{descripcionTipoCaso}} </p>
           {# <p id="cancelLabel" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{cancelLabel}}</p> #}
             <p id="removeLabel" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{removeLabel}}</p>
