--- a/app/Resources/views/crmcontacto/index_contacto.html.twig
+++ b/app/Resources/views/crmcontacto/index_contacto.html.twig
@@ -20,7 +20,7 @@
 
 {% block descripcion %}
     <div class="col-md-5">
-        <p class="robo" style="font-weight: 300; margin-bottom: 0px; font-size: 30px;">{{encabezadoContacto}}</p>
+        <p class="robo" style="font-weight: 300; margin-bottom: 0px; font-size: 30px;">{{encabezadoContacto | capitalize}}</p>
         <p class="robo" style="font-weight: 300; font-size: 14px; ">{{descripcionContacto}}</p>
         {# <p id="cancelLabel" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{cancelLabel}}</p> #}
         <p id="removeLabel" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{removeLabel}}</p>
