--- a/app/Resources/views/crmcuenta/index_account.html.twig
+++ b/app/Resources/views/crmcuenta/index_account.html.twig
@@ -22,7 +22,7 @@
 {% endblock %}
 {% block descripcion %}
      <div class="col-md-5">
-            <p class="robo" style="font-weight: 300; margin-bottom: 0px; font-size: 30px;">{# {{encabezadoAccount}} #}{{opcion}}</p>
+            <p class="robo" style="font-weight: 300; margin-bottom: 0px; font-size: 30px;">{# {{encabezadoAccount}} #}{{opcion | capitalize}}</p>
             <p class="robo" style="font-weight: 300; font-size: 14px; ">{{descripcionAccount}} {{opcion}}</p>
           {# <p id="cancelLabel" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{cancelLabel}}</p> #}
             <p id="removeLabel" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{removeLabel}}</p>
