--- a/app/Resources/views/crmcuenta/index_socio.html.twig
+++ b/app/Resources/views/crmcuenta/index_socio.html.twig
@@ -22,7 +22,7 @@
 {% endblock %}
 {% block descripcion %}
      <div class="col-md-5">
-          <p class="robo" style="font-weight: 300; margin-bottom: 0px; font-size: 30px;">{{encabezadoSocio}}</p>
+          <p class="robo" style="font-weight: 300; margin-bottom: 0px; font-size: 30px;">{{encabezadoSocio | capitalize}}</p>
           <p class="robo" style="font-weight: 300; font-size: 14px; ">{{descripcionSocio}}</p>
           {# <p id="cancelLabel" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{cancelLabel}}</p> #}
             <p id="removeLabel" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{removeLabel}}</p>
