--- a/app/Resources/views/layout/nav.html.twig
+++ b/app/Resources/views/layout/nav.html.twig
@@ -37,10 +37,10 @@
               <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <img src="{{ asset('photos/empleado/')}}profile.png{#{{app.user.persona.empleado[0].foto}}#}" style="width: 25px;"> &nbsp; {{app.user.persona.nombre}} {{app.user.persona.apellido}}<span class="caret"></span></a>
                    <ul class="dropdown-menu">
-                      <li role="presentation"><a role="menuitem" tabindex="-1" href=""><span class="pull-right"><i class="fa fa-key"></i></span>{{editPass}}</a></li>
-                      <li role="presentation"><a role="menuitem" tabindex="-1" href=""><span class="pull-right"><i class="fa fa-book text-muted"></i></span>{{showLog}}</a></li>
+                      {#<li role="presentation"><a role="menuitem" tabindex="-1" href=""><span class="pull-right"><i class="fa fa-key"></i></span>{{editPass}}</a></li>
+                      <li role="presentation"><a role="menuitem" tabindex="-1" href=""><span class="pull-right"><i class="fa fa-book text-muted"></i></span>{{showLog}}</a></li>#}
                       {% if is_granted('ROLE_ADMIN') %}
-                           <li role="presentation"><a role="menuitem" tabindex="-1" href=""><span class="pull-right"><i class="glyphicon glyphicon-cog text-muted"></i></span>{{settings}}</a></li>
+                           <li role="presentation"><a role="menuitem" tabindex="-1" href="{{path('admin_ctletapaventa_index')}}"><span class="pull-right"><i class="glyphicon glyphicon-cog text-muted"></i></span>{{settings}}</a></li>
                       {% endif %}
                       <li role="separator" class="divider"></li>
                       <li role="presentation"><a role="menuitem" tabindex="-1" href="{{ path('erpdg_logout') }}"><span class="pull-right"><i class="fa fa-sign-out text-muted"></i></span> {{logOut}}</a></li>
