--- a/app/Resources/views/crmcuenta/index_socio.html.twig
+++ b/app/Resources/views/crmcuenta/index_socio.html.twig
@@ -60,7 +60,7 @@
                         <th aria-label="Name: activate to sort column ascending" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="sortRecords mdl-data-table__cell--non-numeric sorting">{{nameSocio}}</th>
                         <th aria-label="Name: activate to sort column ascending" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="sortRecords mdl-data-table__cell--non-numeric sorting">{{cuentaSocio}}</th>
                         
-                        <th aria-label="Email: activate to sort column ascending" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="sortRecords mdl-data-table__cell--non-numeric sorting">{{emailSocio}}</th>
+                        {#<th aria-label="Email: activate to sort column ascending" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="sortRecords mdl-data-table__cell--non-numeric sorting">{{emailSocio}}</th>#}
                         <th aria-label="Phone: activate to sort column ascending" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="sortRecords mdl-data-table__cell--non-numeric sorting">{{phoneSocio}}</th>
                         <th aria-label="Industry: activate to sort column ascending" colspan="1" rowspan="1" aria-controls="example" tabindex="0" class="sortRecords mdl-data-table__cell--non-numeric sorting">{{industriaSocio}}</th>
                     </tr>
@@ -95,7 +95,7 @@
                     { "data": "chk" },
                     { "data": "name" },
                     { "data": "account" },
-                    { "data": "email" },
+                    {#{ "data": "email" },#}
                     { "data": "phone" },
                     { "data": "industry" },
 
